[project]
name = "LLMS_Example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sebastian Blanco Abrajan", email = "sebastian.blanco@kaxanuk.mx"},
]
dependencies = ["pandas>=2.2.3", 
                "python-dotenv>=1.0.1", 
                "openai>=1.56.1", 
                "langchain>=0.3.9", 
                "langchain-community>=0.3.9", 
                "tiktoken>=0.8.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
